@@ -26,6 +26,7 @@
 
 		<package.identifier>open-ecard-app</package.identifier>
 		<package.deps>pcscd</package.deps>
+		<package.type>PLATFORM</package.type>
 	</properties>
 
 	<profiles>
@@ -39,62 +40,38 @@
 			<build>
 				<plugins>
 					<plugin>
-						<groupId>net.agilhard.maven.plugins</groupId>
-						<artifactId>jlink-jpackager-maven-plugin</artifactId>
-						<extensions>true</extensions>
+						<groupId>com.github.akman</groupId>
+						<artifactId>jpackage-maven-plugin</artifactId>
 						<executions>
 							<execution>
-								<id>jpackage</id>
-								<phase>package</phase>
+								<phase>verify</phase>
 								<goals>
-									<goal>jpackager</goal>
+									<goal>jpackage</goal>
 								</goals>
 								<configuration>
-									<!-- Jpackage arguments -->
 									<!-- Don't use spaces in application name, because of problems with install scripts ... -->
-									<identifier>org.openecard.richclient</identifier>
-									<appVersion>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}</appVersion>
+									<!--<name>org.openecard.richclient</name>-->
+									<appversion>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}</appversion>
 									<module>org.openecard.richclient/org.openecard.richclient.RichClient</module>
-									<jdkToolchain>
-										<version>[14,)</version>
-									</jdkToolchain>
-									<runtimeImage>${project.build.directory}/open-ecard</runtimeImage>
-									<skipModulesInclude>true</skipModulesInclude>
+									<modulepath>
+										<dependencysets>
+											<dependencyset>
+												<includeoutput>true</includeoutput>
+												<excludeautomatic>true</excludeautomatic>
+											</dependencyset>
+										</dependencysets>
+									</modulepath>
 									<!-- JVM arguments of the application -->
-									<jvmArgs>
-										<jvmArg>-XX:-UsePerfData</jvmArg>
-										<jvmArg>-XX:-Inline</jvmArg>
-										<jvmArg>-XX:+AggressiveOpts</jvmArg>
-										<jvmArg>-Xms16m</jvmArg>
-										<jvmArg>-Xmx64m</jvmArg>
-										<jvmArg>-XX:+UseG1GC</jvmArg>
-										<jvmArg>-XX:MinHeapFreeRatio=1</jvmArg>
-										<jvmArg>-XX:MaxHeapFreeRatio=5</jvmArg>
-										<jvmArg>-XX:G1ReservePercent=5</jvmArg>
-										<jvmArg>-Djavax.xml.stream.isSupportingExternalEntities=false</jvmArg>
-										<jvmArg>-Djavax.xml.stream.supportDTD=false</jvmArg>
-									</jvmArgs>
+									<javaoptions>
+										-XX:-UsePerfData -XX:-Inline -Xms16m -Xmx64m -XX:+UseG1GC -XX:MinHeapFreeRatio=1 -XX:MaxHeapFreeRatio=5 -XX:G1ReservePercent=5 -Djavax.xml.stream.isSupportingExternalEntities=false -Djavax.xml.stream.supportDTD=false --add-exports=org.openecard.richclient/com.github.markusbernhardt.proxy.jna.win=com.sun.jna
+									</javaoptions>
 									<!-- Application package metadata -->
 									<vendor>${app.vendor}</vendor>
 									<description>${app.description}</description>
-									<licenseFile>${project.basedir}/src/main/resources/licenses/LICENSE.GPL</licenseFile>
+									<licensefile>${project.basedir}/src/main/resources/licenses/LICENSE.GPL</licensefile>
 									<copyright>2019 ecsec GmbH</copyright>
-									<linuxOptions>
-										<bundleName>${package.identifier}</bundleName>
-										<debMaintainer>${app.maintainer}</debMaintainer>
-										<rpmLicenseType>GPL v3</rpmLicenseType>
-										<menuGroup>Network;</menuGroup>
-										<packageDeps>${package.deps}</packageDeps>
-									</linuxOptions>
-									<macOptions>
-										<bundleName>${app.identifier}</bundleName>
-										<bundleIdentifier>org.openecard.versioncheck.MainLoader</bundleIdentifier>
-									</macOptions>
-									<windowsOptions>
-										<dirChooser>true</dirChooser>
-										<menuGroup>misc</menuGroup>
-										<upgradeUUID>CB11CB66-71B5-42C1-8076-15F1FEDCC22A</upgradeUUID>
-									</windowsOptions>
+									<type>${package.type}</type>
+									<verbose>true</verbose>
 								</configuration>
 							</execution>
 						</executions>
@@ -106,6 +83,7 @@
 			<id>app-bundles-Linux</id>
 			<activation>
 				<os>
+					<name>Linux</name>
 					<family>Unix</family>
 				</os>
 				<property>
@@ -137,12 +115,16 @@
 						</executions>
 					</plugin>
 					<plugin>
-						<groupId>net.agilhard.maven.plugins</groupId>
-						<artifactId>jlink-jpackager-maven-plugin</artifactId>
+						<groupId>com.github.akman</groupId>
+						<artifactId>jpackage-maven-plugin</artifactId>
 						<configuration>
 							<name>${package.identifier}</name>
 							<icon>${project.basedir}/src/main/resources/linux/Open-eCard-App.png</icon>
-							<resourceDir>${project.basedir}/target/linux/resources</resourceDir>
+							<resourcedir>${project.basedir}/target/linux/resources</resourcedir>
+							<linuxdebmaintainer>${app.maintainer}</linuxdebmaintainer>
+							<linuxrpmlicensetype>GPL v3</linuxrpmlicensetype>
+							<linuxmenugroup>Network;</linuxmenugroup>
+							<linuxpackagedeps>${package.deps}</linuxpackagedeps>
 						</configuration>
 					</plugin>
 				</plugins>
@@ -181,14 +163,19 @@
 							</execution>
 						</executions>
 					</plugin>
-					<!-- Create .msi installer -->
+					<!-- Package -->
 					<plugin>
-						<groupId>net.agilhard.maven.plugins</groupId>
-						<artifactId>jlink-jpackager-maven-plugin</artifactId>
+						<groupId>com.github.akman</groupId>
+						<artifactId>jpackage-maven-plugin</artifactId> 
 						<configuration>
 							<name>${app.identifier}</name>
 							<icon>${project.basedir}/src/main/resources/windows/Open-eCard-App.ico</icon>
-							<type>msi</type>
+							<resourcedir>${project.basedir}/src/main/resources/windows</resourcedir>
+							<windirchooser>true</windirchooser>
+							<winmenugroup>misc</winmenugroup>
+							<type>MSI</type>
+							<winupgradeuuid>B11CB66-71B5-42C1-8076-15F1FEDCC22A</winupgradeuuid>
+							<temp>${project.basedir}/target/jpackage-build</temp>
 						</configuration>
 					</plugin>
 					<!-- Create .exe installer -->
@@ -198,7 +185,7 @@
 						<executions>
 							<execution>
 								<id>create-exe</id>
-								<phase>package</phase>
+								<phase>verify</phase>
 								<goals>
 									<goal>exec</goal>
 								</goals>
@@ -228,12 +215,17 @@
 			<build>
 				<plugins>
 					<plugin>
-						<groupId>net.agilhard.maven.plugins</groupId>
-						<artifactId>jlink-jpackager-maven-plugin</artifactId>
+						<groupId>com.github.akman</groupId>
+						<artifactId>jpackage-maven-plugin</artifactId>
 						<configuration>
 							<name>${app.identifier}</name>
 							<icon>${project.basedir}/src/main/resources/mac-os/Open-eCard-App.icns</icon>
-							<resourceDir>${project.basedir}/src/main/resources/mac-os</resourceDir>
+							<resourcedir>${project.basedir}/src/main/resources/mac-os</resourcedir>
+							<macpackagename>${app.identifier}</macpackagename>
+							<macpackageidentifier>org.openecard.versioncheck.MainLoader</macpackageidentifier>
+							<macsign>true</macsign>
+							<macsigningkeyusername>ecsec GmbH (72RMQ6K75Z)</macsigningkeyusername>
+							<macsigningkeychain>/Users/ecsec-ci/Library/Keychains/ecsec.keychain-db</macsigningkeychain>
 						</configuration>
 					</plugin>
 				</plugins>
@@ -286,36 +278,6 @@
 					<skip>true</skip>
 				</configuration>
 			</plugin>
-
-			<!-- Jpackage plugin to create installers -->
-			<plugin>
-				<groupId>net.agilhard.maven.plugins</groupId>
-				<artifactId>jlink-jpackager-maven-plugin</artifactId>
-				<extensions>true</extensions>
-				<executions>
-					<execution>
-						<id>jlink</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>jlink</goal>
-						</goals>
-						<configuration>
-							<!-- JLink arguments -->
-							<launcher>open-ecard=org.openecard.richclient/org.openecard.richclient.RichClient</launcher>
-							<compress>2</compress>
-							<noHeaderFiles>true</noHeaderFiles>
-							<noManPages>true</noManPages>
-							<stripDebug>false</stripDebug>
-							<ignoreSigningInformation>true</ignoreSigningInformation>
-							<outputDirectoryImage>${project.build.directory}/open-ecard</outputDirectoryImage>
-							<jdkToolchain>
-								<version>${bundled.java.version}</version>
-								<vendor>OpenJDK</vendor>
-							</jdkToolchain>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 	</build>
 
@@ -342,21 +304,37 @@
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-swing</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-base</artifactId>
+		</dependency>
 
 		<!-- JAXB -->
 		<dependency>
-			<groupId>org.glassfish.jaxb</groupId>
-			<artifactId>jaxb-runtime</artifactId>
-			<exclusions>
-				<exclusion>
-					<groupId>jakarta.activation</groupId>
-					<artifactId>jakarta.activation-api</artifactId>
-				</exclusion>
-			</exclusions>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.sun.activation</groupId>
-			<artifactId>jakarta.activation</artifactId>
+			<groupId>jakarta.xml.bind</groupId>
+			<artifactId>jakarta.xml.bind-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.xml.ws</groupId>
+			<artifactId>jakarta.xml.ws-api</artifactId>
+		</dependency>
+
+		<!-- JNA SmartcardIO -->
+		<dependency>
+			<groupId>com.github.martinpaljak</groupId>
+			<artifactId>apdu4j-jnasmartcardio</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.java.dev.jna</groupId>
+			<artifactId>jna-jpms</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.java.dev.jna</groupId>
+			<artifactId>jna-platform-jpms</artifactId>
 		</dependency>
 	</dependencies>
 
